# xdnn-reloaded

./: CMakeLists.txt  README.md  amx_sgemm_bf16bf16bf16.cpp  amx_sgemm_bf16bf16bf16.h  amx_sgemm_bf16f8bf16.cpp  amx_sgemm_bf16f8bf16.h  amx_sgemm_f16f16f16.cpp  amx_sgemm_f16f16f16.h  bgemm_bf16bf16bf16.cpp  bgemm_bf16bf16bf16.h  bgemm_f32bf16f32.cpp  conversion.h  hgemm.cpp  hgemm_f16f16f32.cpp  hgemm_f32f16f16.cpp  hgemm_f32f16f32.cpp  hgemm_f32s8f32.cpp  hgemm_f32s8f32.h  hgemm_f32u4f32.cpp  hgemm_f32u4f32.h  intrinsic_ext.cpp  platform_detection.cpp  platform_detection.h  sgemm.cpp  sgemm_bf16bf16f32.cpp  sgemm_f32bf16bf16.cpp  sgemm_f32f16bf16.cpp  sgemm_f32f16f32.cpp  sgemm_f32nf4f32.cpp  sgemm_f32s8f32.cpp  sgemm_f32u4f32.cpp  softmax.cpp  transpose.cpp  transpose.h  transpose_impl.cpp  xdnn.cpp  xdnn.h  xdnn.sh
data_types/: data_types.h  fp8_e4m3.h  uint4x2.h
tests/: .gitignore  CMakeLists.txt  README.md  build_and_run_tests.sh  run_all_tests.cpp  test_amx_sgemm.cpp  test_basics.cpp  test_bgemm.cpp  test_data_types.cpp  test_hgemm.cpp  test_sgemm.cpp  test_softmax.cpp  test_transpose.cpp  transpose_impl.cpp
